Fix typo: 'Description' to 'Detail'

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section>
-        <h2>Event Description</h2>
+        <h2>Event Detail</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
           reprehenderit aliquid facere odio iure enim fugit laboriosam vero,
