--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Schedule for TechCon 2024</h1>
-      <nav></nav>
+      <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./about.html">About</a></li>
