--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -19,18 +19,36 @@
     </header>
     <main>
       <a href="mailto:TechCon2024@conference.com" target="_blank">Email Address</a>
-      <a href="https://facebook.com/">
+      <a href="https://facebook.com/" target="_blank">
         <img src="./assets/facebook.svg" alt="TechCon Facebook Social" width="24" height="24">
       </a>
-      <a href="https://x.com/">
+      <a href="https://x.com/" target="_blank">
         <img src="./assets/x.svg" alt="TechCon X Social" width="24" height="24">
       </a>
-      <a href="https://instagram.com/">
+      <a href="https://instagram.com/" target="_blank">
         <img src="./assets/instagram.svg" alt="TechCon Instagram Social" width="24" height="24">
       </a>
-      <a href="https://linkedin.com/">
+      <a href="https://linkedin.com/" target="_blank">
         <img src="./assets/linkedin.svg" alt="TechCon Linkedin Social" width="24" height="24">
       </a>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3009.3439788597316!2d-83.65492592395789!3d41.03960627134623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883eab93a3c6f373%3A0xbd52349c78347c18!2zMjAwIFcgTWFpbiBDcm9zcyBTdCwgRmluZGxheSwgT0ggNDU4NDAsIOGLqeGKk-GLreGJteGLtSDhiLXhibThibXhiLU!5e0!3m2!1sam!2set!4v1726340147763!5m2!1sam!2set"
+        width="600"
+        height="450"
+        style="border:0;" 
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+      <form action="/submit-form" method="post">
+        <label for="username">Name:</label>
+        <input type="text" name="username" id="username" required>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" required>
+        <label for="message">Message:</label>
+        <textarea name="message" id="message"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </main>
     <footer>
       <p>TechCon copyright &copy; 2024, All rights reserved.</p>
