Fix conference email address

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <main>
-      <a href="mailto:TechCon2024@conference.com" target="_blank">Email Address</a>
+      <a href="mailto:email@example.com" target="_blank">Email Address</a>
       <a href="https://facebook.com/" target="_blank">
         <img src="./assets/facebook.svg" alt="TechCon Facebook Social" width="24" height="24">
       </a>
